--- a/src/main/webapp/resources/styles.css
+++ b/src/main/webapp/resources/styles.css
@@ -83,7 +83,7 @@ body{
 .chooseX{
     margin-left: 65%;
 }
-.slider_x{
+#form\:slider_x{
     width: 98%;
     height: 50%;
     padding-left: 3%;
@@ -105,7 +105,7 @@ button, select, input:focus{
     margin-right: 0.5%;
     box-shadow: inset 0 0 6px;
 }
-#y_in{
+#form\:y_in{
     width: 95%;
     height: 35%;
     border-radius: 20px;
@@ -128,7 +128,7 @@ button, select, input:focus{
     margin-left: 0.5%;
     box-shadow: inset 0 0 6px;
 }
-#r_in {
+#form\:r_in {
     width: 98%;
     height: 35%;
     padding-left: 1%;
@@ -154,7 +154,7 @@ input[type="radio"] {
     padding-left: 14%;
     box-shadow: inset 0 0 6px;
 }
-#send{
+#form\:send{
     cursor: pointer;
     padding: 10px;
     border-radius: 30px;
@@ -204,7 +204,7 @@ input[type="radio"] {
     font-size: large;
     font-family: Jura, sans-serif;
 }
-#send:hover, #toStart:hover, #redirect:hover{
+#form\:send:hover, #toStart:hover, #redirect:hover{
     color: white;
 }
 #toStart{
