--- a/src/main/webapp/resources/styles.css
+++ b/src/main/webapp/resources/styles.css
@@ -81,12 +81,16 @@ body{
     box-shadow: inset 0 0 6px;
 }
 .chooseX{
-    margin-left: 65%;
+    margin-left: 60%;
+}
+#form\:xValue {
+    font-weight: bold;
+    color: white;
+    margin-top: 2%;
 }
 #form\:slider_x{
-    width: 98%;
-    height: 50%;
-    padding-left: 3%;
+    margin-top: 6%;
+    margin-left: 33%;
 }
 button, select, input:focus{
     outline: none;
